# Player

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/johan/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: player.cpp  queue.cpp
app/src/main/cpp/include/: queue.h
app/src/main/java/com/johan/player/: MainActivity.java  Player.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/johan/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
